2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Just for testing

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Reduced "flashy" mistakes to focus drawing in nautilus (treeview)

2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Lighter tabs focus

2008-01-24  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	Shadow on prelight button :)

2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	No shadow on prelight button (previous revision)

2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	Better approach to reliefstyle default state

2008-01-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_glossy.c:
	(clearlooks_glossy_draw_button):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	* engines/clearlooks/src/clearlooks_rc_style.c:
	(clearlooks_rc_style_init), (clearlooks_gtk2_rc_parse_int),
	(clearlooks_rc_style_parse), (clearlooks_rc_style_merge):
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_set_widget_parameters), (clearlooks_style_draw_box),
	(clearlooks_style_init_from_rc), (clearlooks_style_copy):
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/clearlooks_types.h:
	New option: int reliefstyle to enable/disable shadows on buttons.
	Default is 1 (enable shadows on Gummy and prelight on Glossy)
