@@ -2,6 +2,13 @@
 
 	* engines/clearlooks/src/clearlooks_draw_gummy.c:
 	(clearlooks_gummy_draw_focus):
+	New treeview look, rounded focus on treeview "small" row
+	The one you can find in pidgin for example
+
+2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* engines/clearlooks/src/clearlooks_draw_gummy.c:
+	(clearlooks_gummy_draw_focus):
 	Just for testing
 
 2008-01-25  Andrea Cimitan  <andrea.cimitan@gmail.com>
